--- a/src/global.css
+++ b/src/global.css
@@ -1,188 +1,113 @@
 * {
   box-sizing: border-box;
 }
-
 html {
-  --bg: #efefef;
-  --fg: #1e1e1e;
-  --gray: #555;
-  --light-gray: #ccc;
-  --shadow: #e6e6e6;
-  --success: rgb(90, 206, 132);
-  --primary: #FF585D;
-  --secondary: #0072CE;
-
+  --bg: #fff;
+  --fg: #25282a;
+  --gray: #888;
+  --royal: #0072ce;
+  --blue: #6ad1e3;
+  --primary: #d1ccbd;
+  --secondary: var(--royal);
+  --tertiary: #ff585d;
   background-color: var(--bg);
   color: var(--fg);
-  font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
-  font-size: calc(0.9em + 0.5vw);
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif;
+  font-size: calc(.65em + 0.7vw);
   line-height: 1.3;
 }
-
+html ::selection {
+  background: var(--secondary);
+  color: var(--bg);
+}
+@media (prefers-color-scheme: dark) {
+  html {
+    --bg: #25282a;
+    --fg: #fff;
+    --secondary: var(--blue);
+  }
+  html ::selection {
+    background: var(--secondary);
+    color: var(--fg);
+  }
+}
 body {
-  margin: 0;
-  padding: 1em;
-}
-
-main {
   margin: 0 auto;
-  max-width: 25em;
+  padding: 0 1em;
+  max-width: 40em;
 }
-
-h1 {
-  background-image: url(assets/logo-black.svg);
-  background-position: center 1em;
-  background-repeat: no-repeat;
-  background-size: auto 1.5em;
-  margin-top: 0;
-  padding: 3.5em 0 0.5em;
-  text-align: center;
+fieldset {
+  border: none;
+  margin: 0;
+  padding: 0;
 }
-
-a,
-.link {
+.highlight {
+  align-items: center;
+  display: flex;
+  margin-bottom: 0.5em;
+  width: 100%;
+}
+.highlight label {
+  margin-right: 0.5em;
+}
+.highlight input {
+  caret-color: var(--secondary);
+}
+label {
+  color: var(--gray);
+}
+button, .highlight {
+  border-radius: 5px;
+  border-color: var(--primary);
+  border: 0.1em solid var(--primary);
+  padding: 0.5em 1em;
+}
+button:hover, .highlight:hover, button:focus, .highlight:focus, button:focus-within, .highlight:focus-within {
+  border-color: var(--secondary);
+}
+input {
+  border: none;
+  flex: 1;
+}
+input:read-only {
   color: var(--primary);
-  text-decoration: none;
 }
-a:hover,
-a:focus,
-.link:hover,
-.link:focus {
-  text-decoration: underline;
+input[type="number"] {
+  text-align: center;
+  border-bottom: 0.1em solid var(--primary);
+  margin: 0 1em;
+  width: 4em;
+  padding-left: 0.5em;
 }
-a:active,
-.link:active {
-  color: var(--secondary);
+input[type="number"]:hover, input[type="number"]:focus {
+  border-color: var(--secondary);
 }
-
 button, input {
+  background: transparent;
+  color: inherit;
+  cursor: pointer;
   font: inherit;
   outline: none;
 }
-
 button {
-  background-color: var(--secondary);
-  border-radius: 5px;
-  border: none;
-  color: #efefef;
-  cursor: pointer;
-  padding: 0.3em 0.75em;
-  transition: transform 30ms;
+  position: relative;
+  transition: top 50ms;
 }
 button:hover, button:focus {
-  box-shadow: 0 0 10em rgba(255, 255, 255, 0.2) inset;
+  top: -1px;
 }
 button:active {
-  box-shadow: 0 0 10em rgba(0, 0, 0, 0.1) inset;
+  background: var(--secondary);
+  border-color: var(--secondary);
+  top: 1px;
 }
-button.link {
-  background: none;
-  border: none;
-  box-shadow: none;
-  display: inline;
-}
-[disabled] button, button[disabled] {
-  box-shadow: none;
-  background-color: var(--light-gray);
-  color: gray;
-  cursor: not-allowed;
-  transform: none;
-}
-[disabled] button {
-  text-indent: -900em;
-  width: 2em;
-  position: relative;
-}
-[disabled] button:after {
-  content: " ";
-  display: block;
-  width: 0.8em;
-  height: 0.8em;
-  border-radius: 50%;
-  border: 2px solid #fff;
-  border-color: var(--fg) transparent var(--fg) transparent;
-  animation: loader 1.2s linear infinite;
-  position: absolute;
-  top: 0.45em;
-  right: 0.5em;
-}
-@keyframes loader {
-  0% { transform: rotate(0deg) }
-  100% { transform: rotate(360deg) }
+.is-premium {
+  border-left: 0.25em solid var(--secondary);
+  padding-left: 0.25em;
+  margin-left: -0.5em;
 }
 
-fieldset {
-  border: none;
-  padding: 2em 0;
-}
-
-input {
-  background-color: var(--shadow);
-  border: none;
-  border-radius: 5px 0 0 5px;
-  caret-color: var(--primary);
-  color: inherit;
-  padding: 0.25em 1em;
-}
-input::selection {
-  background-color: var(--secondary);
-  color: #efefef;
-}
-input:focus {
-  box-shadow: 0 0 10em rgba(0, 0, 0, 0.02) inset;
-}
-
-code {
-  color: var(--gray);
-}
-
-li {
-  padding-bottom: 1em;
-}
-
-aside {
-  animation: notify ease-in-out 10s;
-  background-color: var(--shadow);
-  border-radius: 5px;
-  bottom: 0;
-  font-size: 0.8em;
-  margin: 1em;
-  padding: 1em;
-  position: fixed;
-  transform: translateY(10em);
-  right: 0;
-}
-aside footer {
+.message-info {
   display: flex;
-  font-size: 0.9em;
   justify-content: space-between;
-  margin-top: 0.5em;
-}
-aside footer *:first-child {
-  color: var(--success);
-}
-aside footer *:last-child {
-  color: var(--gray);
-}
-@keyframes notify {
-  0% { transform: translateY(10em) }
-  5% { transform: translateY(0) }
-  95% { transform: translateY(0) }
-  100% { transform: translateY(10em) }
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    --bg: #1e1e1e;
-    --fg: #efefef;
-    --gray: #aaa;
-    --shadow: #2a2a2a;
-    --light-gray: #444;
-  }
-  h1 {
-    background-image: url(assets/logo-white.svg);
-  }
-  input:focus {
-    box-shadow: 0 0 10em rgba(255, 255, 255, 0.02) inset;
-  }
 }
